--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <h2>Team</h2>
     <div class="team-member">
-        <strong>Shandian Zhe</strong> - <a href="https://example.com/profile/shandian-zhe">Profile</a>
+        <strong>Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
     </div>
     <div class="team-member">
         <strong>Keyan Chen</strong> - <a href="#">Profile</a>
