--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <footer>
-        © 2024 Elements Project Team
+        © 2024 Shandian Zhe's Project Team
     </footer>
 </body>
 </html>
