--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             color: #333;
         }
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #e0f7fa;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
