--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             max-width: 1000px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #e0f7fa;
+            background-color: #fff;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
@@ -81,10 +81,12 @@
             <p>This award reflects NSF's statutory mission and has been deemed worthy of support through evaluation using the Foundation's intellectual merit and broader impacts review criteria.</p>
         </div>
         
-        <h2>Links to Code</h2>
+        <h2>Links to Project andCode</h2>
         <div class="links">
-            <a href="#">Repository 1</a>
-            <a href="#">Repository 2</a>
+            <a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a>
+            <a href="https://github.com/shib0li/MRA-FNO">MRA-FNO: Multi-Resolution Active Learning of Fourier Neural Operators</a>
+            <a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">(ICLR 2024) Gaussian-Process-Slover-for-High-Freq-PDE</a>
+            <a href="https://github.com/xuangu-fang/Functional-Bayesian-Tucker-Decomposition">Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor Data</a>
         </div>
         
     </div>
