--- a/index.html
+++ b/index.html
@@ -25,8 +25,22 @@
             color: #333;
             text-align: center;
         }
+        .team-section {
+            margin: 20px 0;
+        }
         .team-member {
-            margin: 10px 0;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+        }
+        .team-member img {
+            border-radius: 50%;
+            margin-right: 20px;
+            width: 100px;
+            height: 100px;
+        }
+        .team-member strong {
+            display: block;
         }
         .team-member a {
             color: #007bff;
@@ -60,14 +74,39 @@
         <h1>Elements: A Convergent Physics-based and Data-driven Computing Platform for Building Modeling</h1>
         
         <h2>Team</h2>
-        <div class="team-member">
-            <strong>Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
+        <div class="team-section">
+            <div class="team-member">
+                <img src="images/jianli.jpg" alt="Jianli Chen">
+                <div>
+                    <strong>Pi: Jianli Chen</strong> - <a href="#">Profile</a>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="images/shandian.jpg" alt="Shandian Zhe">
+                <div>
+                    <strong>Co-PI: Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
+                </div>
+            </div>
         </div>
-        <div class="team-member">
-            <strong>Keyan Chen</strong> - <a href="#">Profile</a>
-        </div>
-        <div class="team-member">
-            <strong>Da Long</strong> - <a href="#">Profile</a>
+        
+        <h3>Graduate Students</h3>
+        <div class="team-section">
+            <div class="team-member">
+                <img src="images/keyan.jpg" alt="Keyan Chen">
+                <div>
+                    <strong>Keyan Chen</strong><br>
+                    PhD student, 2nd year<br>
+                    <a href="https://www.linkedin.com/in/keyanchen95918/">LinkedIn</a>
+                </div>
+            </div>
+            <div class="team-member">
+                <img src="images/dalong.jpg" alt="Da Long">
+                <div>
+                    <strong>Da Long</strong><br>
+                    PhD student, 4th year<br>
+                    <a href="www.linkedin.com/in/da-long-utah">LinkedIn</a>
+                </div>
+            </div>
         </div>
 
         <h2>Introduction</h2>
