--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div>
                     <strong>Da Long</strong><br>
                     PhD student, 4th year<br>
-                    <a href="www.linkedin.com/in/da-long-utah">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/da-long-utah/">LinkedIn</a>
                 </div>
             </div>
         </div>
