--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         <h2>Team</h2>
         <div class="team-section">
             <div class="team-member">
-                <img src="images/jianli.jpg" alt="Jianli Chen">
+                <img src="image/jianli.jpg" alt="Jianli Chen">
                 <div>
                     <strong>Pi: Jianli Chen</strong> - <a href="#">Profile</a>
                 </div>
             </div>
             <div class="team-member">
-                <img src="images/shandian.jpg" alt="Shandian Zhe">
+                <img src="image/shandian.jpg" alt="Shandian Zhe">
                 <div>
                     <strong>Co-PI: Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
                 </div>
@@ -92,7 +92,7 @@
         <h3>Graduate Students</h3>
         <div class="team-section">
             <div class="team-member">
-                <img src="images/keyan.jpg" alt="Keyan Chen">
+                <img src="image/keyan.jpg" alt="Keyan Chen">
                 <div>
                     <strong>Keyan Chen</strong><br>
                     PhD student, 2nd year<br>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="images/dalong.jpg" alt="Da Long">
+                <img src="image/dalong.jpg" alt="Da Long">
                 <div>
                     <strong>Da Long</strong><br>
                     PhD student, 4th year<br>
