--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             align-items: center;
         }
         .team-member img {
-            border-radius: 50%;
             margin-right: 20px;
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 200px;
+            object-fit: cover;
         }
         .team-member strong {
             display: block;
