--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
             margin: 20px 0;
         }
         .team-member {
-            margin-bottom: 20px;
             display: flex;
             align-items: center;
+            width: 48%;
+        }
+        .team-row {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
         }
         .team-member img {
             margin-right: 20px;
@@ -75,36 +80,40 @@
         
         <h2>Team</h2>
         <div class="team-section">
-            <div class="team-member">
-                <img src="image/jianli.jpg" alt="Jianli Chen">
-                <div>
-                    <strong>Pi: Jianli Chen</strong> - <a href="#">Profile</a>
+            <div class="team-row">
+                <div class="team-member">
+                    <img src="image/jianli.jpg" alt="Jianli Chen">
+                    <div>
+                        <strong>Pi: Jianli Chen</strong> - <a href="#">Profile</a>
+                    </div>
                 </div>
-            </div>
-            <div class="team-member">
-                <img src="image/shandian.jpg" alt="Shandian Zhe">
-                <div>
-                    <strong>Co-PI: Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
+                <div class="team-member">
+                    <img src="image/shandian.jpg" alt="Shandian Zhe">
+                    <div>
+                        <strong>Co-PI: Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
+                    </div>
                 </div>
             </div>
         </div>
         
         <h3>Graduate Students</h3>
         <div class="team-section">
-            <div class="team-member">
-                <img src="image/keyan.jpg" alt="Keyan Chen">
-                <div>
-                    <strong>Keyan Chen</strong><br>
-                    PhD student, 2nd year<br>
-                    <a href="https://www.linkedin.com/in/keyanchen95918/">LinkedIn</a>
+            <div class="team-row">
+                <div class="team-member">
+                    <img src="image/keyan.jpg" alt="Keyan Chen">
+                    <div>
+                        <strong>Keyan Chen</strong><br>
+                        PhD student, 2nd year<br>
+                        <a href="https://www.linkedin.com/in/keyanchen95918/">LinkedIn</a>
+                    </div>
                 </div>
-            </div>
-            <div class="team-member">
-                <img src="image/dalong.jpg" alt="Da Long">
-                <div>
-                    <strong>Da Long</strong><br>
-                    PhD student, 4th year<br>
-                    <a href="https://www.linkedin.com/in/da-long-utah/">LinkedIn</a>
+                <div class="team-member">
+                    <img src="image/dalong.jpg" alt="Da Long">
+                    <div>
+                        <strong>Da Long</strong><br>
+                        PhD student, 4th year<br>
+                        <a href="https://www.linkedin.com/in/da-long-utah/">LinkedIn</a>
+                    </div>
                 </div>
             </div>
         </div>
