--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="team-member">
                     <img src="image/jianli.jpg" alt="Jianli Chen">
                     <div>
-                        <strong>Pi: Jianli Chen</strong> - <a href="#">Profile</a>
+                        <strong>Pi: Jianli Chen</strong> - <a href="https://i2be.civil.utah.edu/">Profile</a>
                     </div>
                 </div>
                 <div class="team-member">
@@ -129,7 +129,7 @@
             <p>This award reflects NSF's statutory mission and has been deemed worthy of support through evaluation using the Foundation's intellectual merit and broader impacts review criteria.</p>
         </div>
         
-        <h2>Links to Project and Code</h2>
+        <h2>Project Progress</h2>
         <div class="links">
             <a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a>
             <a href="https://github.com/shib0li/MRA-FNO">MRA-FNO: Multi-Resolution Active Learning of Fourier Neural Operators</a>
