--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="team-section">
             <div class="team-row">
                 <div class="team-member">
-                    <img src="image/jianli.jpg" alt="Jianli Chen">
+                    <img src="image/jianli-chen.jpg" alt="Jianli Chen">
                     <div>
                         <strong>Pi: Jianli Chen</strong> - <a href="https://i2be.civil.utah.edu/">Profile</a>
                     </div>
