--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
         
         <h2>Project Progress</h2>
         <div class="links">
+            <ul>
+                <li><b>Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</b></li>
+                <br>
+                <li><b>Multi-Resolution Active Learning of Fourier Neural Operators</b></li>
+                <br>
+                <li><b>Gaussian-Process-Slover-for-High-Freq-PDE</b></li>
+                <br>
+                <li><b>Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor Data</b></li>
+                <br>
+            </ul>
             <a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a>
             <a href="https://github.com/shib0li/MRA-FNO">MRA-FNO: Multi-Resolution Active Learning of Fourier Neural Operators</a>
             <a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">(ICLR 2024) Gaussian-Process-Slover-for-High-Freq-PDE</a>
