--- a/index.html
+++ b/index.html
@@ -128,7 +128,13 @@
             
             <p>This award reflects NSF's statutory mission and has been deemed worthy of support through evaluation using the Foundation's intellectual merit and broader impacts review criteria.</p>
         </div>
-        
+            <h2> Community and Code Repositories</h2>
+        <div class="code">
+        <p><a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a></p>
+        <p><a href="https://github.com/shib0li/MRA-FNO">Multi-Resolution Active Learning of Fourier Neural Operators</a></p>
+        <p><a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">Solving High Frequency and Multi-Scale PDEs with Gaussian Processes</a></p>
+        <p><a href="https://github.com/xuangu-fang/Functional-Bayesian-Tucker-Decomposition">Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor Data</a></p>
+        </div>
         <h2>Project Progress</h2>
         <div class="links">
             <ul>
@@ -139,13 +145,6 @@
                 <li><b>Bayesian differential equation discovery from temporal and spatial temporal systems: </b> We aim to uncover interpretable patterns and summaries in real spatio-temporal building data. A common approach to characterizing these patterns is through differential equations, including ordinary differential equations (ODEs) and partial differential equations (PDEs). Consequently, we have developed a Bayesian governing equation discovery method called KBASS (Kernel-Based and Bayesian Spike-and-Slab priors). In our method, kernel regression is utilized to estimate the target function, providing a flexible, expressive, and robust solution to handle data sparsity and noise. This is combined with a Bayesian spike-and-slab prior, which is an optimal Bayesian sparse distribution, to facilitate effective operator selection and uncertainty quantification. For efficient posterior inference and function estimation, we have devised an expectation-propagation expectation-maximization (EP-EM) algorithm. To address the computational challenges of kernel regression, we place the function values on a mesh, inducing a Kronecker product construction, and leverage tensor algebra to enable efficient computation and optimization. Our method's effectiveness has been validated through various benchmark tasks, such as discovering the ODE from a chaotic system (Lorenz 96) and a complex fourth-order PDE (Kuramoto-Sivashinsky equation) from a spatio-temporal system. Additionally, our method has successfully identified a predator-prey equation that accurately characterizes the relationship between lynx and hares recorded by Hudson Bay Company from 1900 to 1920.</li>
                 <li><b>Multi-resolution active neural operator learning: </b> In building systems, quantities of interest (e.g., energy use) often evolve through complex processes that can be partially described by differential equations. However, solving high-fidelity equations is computationally expensive. This has led to the development of data-driven operator models for faster predictions. Among these, the Fourier Neural Operator (FNO) is a popular framework, known for its state-of-the-art performance and efficiency in training and prediction. However, gathering training data for FNOs is a costly bottleneck because it frequently requires expensive physical simulations. To address this issue, we propose the Multi-Resolution Active Learning of FNO (MRA-FNO). This method dynamically selects input functions and resolutions to minimize data costs while optimizing learning efficiency. Specifically, we introduce a probabilistic multi-resolution FNO and use ensemble Monte Carlo to develop an effective posterior inference algorithm. For active learning, we maximize a utility-cost ratio as the acquisition function, selecting new examples and resolutions at each step. To enable efficient utility computation, we use moment matching and the matrix determinant lemma. Additionally, we implement a cost annealing framework to prevent over-penalizing high-resolution queries early on. This over-penalization is a significant issue when cost differences between resolutions are large, often causing active learning to remain stuck at low-resolution queries and resulting in poor performance. Our method overcomes this challenge and is applicable to general multi-fidelity active learning and optimization problems. The advantages of our approach have been demonstrated in several benchmark operator learning tasks.</li>                
             </ul>
-        </div>
-        <h2> Code Repositories</h2>
-        <div class="code">
-        <a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a><br>
-        <a href="https://github.com/shib0li/MRA-FNO">Multi-Resolution Active Learning of Fourier Neural Operators</a><br>
-        <a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">Solving High Frequency and Multi-Scale PDEs with Gaussian Processes</a><br>
-        <a href="https://github.com/xuangu-fang/Functional-Bayesian-Tucker-Decomposition">Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor Data</a>
         </div>
         <h2> Related Publications</h2>
         <ol>
