--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@
         </div>
             <h2> Community and Code Repositories</h2>
         <div class="code">
-        <p><a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a></p>
-        <p><a href="https://github.com/shib0li/MRA-FNO">Multi-Resolution Active Learning of Fourier Neural Operators</a></p>
-        <p><a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">Solving High Frequency and Multi-Scale PDEs with Gaussian Processes</a></p>
-        <p><a href="https://github.com/xuangu-fang/Functional-Bayesian-Tucker-Decomposition">Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor Data</a></p>
+            <ul>
+        <li><a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a></li>
+        <li><a href="https://github.com/shib0li/MRA-FNO">Multi-Resolution Active Learning of Fourier Neural Operators</a></li>
+        <li><a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">Solving High Frequency and Multi-Scale PDEs with Gaussian Processes</a></li>
+        <li><a href="https://github.com/xuangu-fang/Functional-Bayesian-Tucker-Decomposition">Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor Data</a></li>
+                </ul>
         </div>
         <h2>Project Progress</h2>
         <div class="links">
