--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Elements: A Convergent Physics-based and Data-driven Computing Platform for Building Modeling</h1>
+        <h1>Elements: A Convergent Physics-based and Data-driven Computing Platform for Building Modeling (Starting from 09/2023)</h1>
         
         <h2>Team</h2>
         <div class="team-section">
@@ -127,6 +127,7 @@
             <p>This award by the Office of Advanced Cyberinfrastructure is jointly supported by the Division of Chemical, Bioengineering, Environmental, and Transport Systems (ENG/CBET) and the Division of Civil, Mechanical & Manufacturing Innovation (ENG/CMMI).</p>
             
             <p>This award reflects NSF's statutory mission and has been deemed worthy of support through evaluation using the Foundation's intellectual merit and broader impacts review criteria.</p>
+            <p><a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2311685&HistoricalAwards=false'>link</a> to NSF website</p>
         </div>
             <h2> Community and Code Repositories</h2>
         <div class="code">
