--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Elements: A Convergent Physics-based and Data-driven Computing Platform for Building Modeling (Starting from 09/2023)</h1>
+        <h1>Elements: A Convergent Physics-based and Data-driven Computing Platform for Building Modeling (09/2023 - present)</h1>
         
         <h2>Team</h2>
         <div class="team-section">
