--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@
                     </div>
                 </div>
             </div>
+             <div class="team-row">
+                <div class="team-member">
+                    <img src="image/keyan.jpg" alt="Keyan Chen">
+                    <div>
+                        <strong>Keyan Chen</strong><br>
+                        PhD student, 2nd year<br>
+                        <a href="https://www.linkedin.com/in/keyanchen95918/">LinkedIn</a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <img src="image/dalong.jpg" alt="Da Long">
+                    <div>
+                        <strong>Da Long</strong><br>
+                        PhD student, 4th year<br>
+                        <a href="https://www.linkedin.com/in/da-long-utah/">LinkedIn</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <h2>Introduction</h2>
