--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             </div>
              <div class="team-row">
                 <div class="team-member">
-                    <img src="image/keyan.jpg" alt="Keyan Chen">
+                    <img src="image/jiang-gang.jpg" alt="Gang Jiang">
                     <div>
-                        <strong>Keyan Chen</strong><br>
+                        <strong>Gang Jiang</strong><br>
                         PhD student, 2nd year<br>
-                        <a href="https://www.linkedin.com/in/keyanchen95918/">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/gang-jiang-46b990273/">LinkedIn</a>
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="image/dalong.jpg" alt="Da Long">
+                    <img src="image/zhihao-ma.jpg" alt="Da Long">
                     <div>
-                        <strong>Da Long</strong><br>
-                        PhD student, 4th year<br>
-                        <a href="https://www.linkedin.com/in/da-long-utah/">LinkedIn</a>
+                        <strong>Zhihao Ma</strong><br>
+                        PhD student, 1th year<br>
+                        <a href="https://www.linkedin.com/in/zhihao-ma-01955a288/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a>
                     </div>
                 </div>
             </div>
