--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <img src="image/jiang-gang.jpg" alt="Gang Jiang">
                     <div>
                         <strong>Gang Jiang</strong><br>
-                        PhD student, 2nd year<br>
+                        PhD student, 3rd year<br>
                         <a href="https://www.linkedin.com/in/gang-jiang-46b990273/">LinkedIn</a>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <img src="image/zhihao-ma.jpg" alt="Da Long">
                     <div>
                         <strong>Zhihao Ma</strong><br>
-                        PhD student, 1th year<br>
+                        PhD student, 2nd year<br>
                         <a href="https://www.linkedin.com/in/zhihao-ma-01955a288/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a>
                     </div>
                 </div>
