--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
         </div>
         <h2> Related Publications</h2>
         <ol>
+            <li>
+                Da Long, Zhitong Xu, Qiwei Yuan, Yin Yang, and Shandian Zhe, “ Invertible Fourier Neural Operators for Tackling Both Forward and Inverse Problems”, The 28th International Conference on Artificial Intelligence and Statistics (AISTATS), 2025
+            </li>
+            <li>
+                Zhitong Xu, Haitao Wang, Jeff M. Phillips, and Shandian Zhe, “Standard Gaussian Process is All You Need for High-Dimensional Bayesian Optimization", International Conference on Learning Representations (ICLR), 2025
+            </li>    
+            <li>
+                Zhitong Xu, Da Long, Yiming Xu, Guang Yang, Shandian Zhe, and Houman Owhadi, “Toward Efficient Kernel-Based Solvers for Nonlinear PDEs”, Forty-Second International Conference on Machine Learning (ICML), 2025.
+            </li>
+            <li>
+                Da Long, Zhitong Xu, Guang Yang, Akil Narayan, and Shandian Zhe, “Arbitrarily-Conditioned Multi-Functional Diffusion for Multi-Physics Emulation”, Forty-Second International Conference on Machine Learning (ICML), 2025.
+            </li>
             <li> 
                 Jiang, G., Ma, Z., Zhang, L., & Chen, J. (2024). "EPlus-LLM: A large language model-based computing platform for automated building energy modeling", Applied Energy, 367, 123431.
             </li>
