--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
             <h2> Community and Code Repositories</h2>
         <div class="code">
             <ul>
+        <li><a href="https://github.com/BayesianAIGroup/ACM-FD">Arbitrarily-Conditioned Multi-Functional Diffusion for Multi-Physics Emulation</a></li>
+        <li><a href="https://github.com/XZT008/Efficient-Kernel-PDE-Solver">Efficient Kernel-Based Solvers for Nonlinear PDEs</a></li>
+        <li><a href="https://github.com/BayesianAIGroup/iFNO">Invertible Fourier Neural Operators for Tackling Both Forward and Inverse Problems</a></li>
+        <li><a href="https://github.com/XZT008/Standard-GP-is-all-you-need-for-HDBO">Standard-GP-is-all-you-need-for-HDBO</a></li>
         <li><a href="https://github.com/long-da/KBASS">Equation Discovery with Bayesian Spike-and-Slab Priors and Efficient Kernels</a></li>
         <li><a href="https://github.com/shib0li/MRA-FNO">Multi-Resolution Active Learning of Fourier Neural Operators</a></li>
         <li><a href="https://github.com/xuangu-fang/Gaussian-Process-Slover-for-High-Freq-PDE">Solving High Frequency and Multi-Scale PDEs with Gaussian Processes</a></li>
@@ -172,15 +176,19 @@
             <li>
                 Da Long, Zhitong Xu, Qiwei Yuan, Yin Yang, and Shandian Zhe, “ Invertible Fourier Neural Operators for Tackling Both Forward and Inverse Problems”, The 28th International Conference on Artificial Intelligence and Statistics (AISTATS), 2025
             </li>
+            <br>
             <li>
                 Zhitong Xu, Haitao Wang, Jeff M. Phillips, and Shandian Zhe, “Standard Gaussian Process is All You Need for High-Dimensional Bayesian Optimization", International Conference on Learning Representations (ICLR), 2025
-            </li>    
+            </li>
+            <br>
             <li>
                 Zhitong Xu, Da Long, Yiming Xu, Guang Yang, Shandian Zhe, and Houman Owhadi, “Toward Efficient Kernel-Based Solvers for Nonlinear PDEs”, Forty-Second International Conference on Machine Learning (ICML), 2025.
             </li>
+            <br>
             <li>
                 Da Long, Zhitong Xu, Guang Yang, Akil Narayan, and Shandian Zhe, “Arbitrarily-Conditioned Multi-Functional Diffusion for Multi-Physics Emulation”, Forty-Second International Conference on Machine Learning (ICML), 2025.
             </li>
+            <br>
             <li> 
                 Jiang, G., Ma, Z., Zhang, L., & Chen, J. (2024). "EPlus-LLM: A large language model-based computing platform for automated building energy modeling", Applied Energy, 367, 123431.
             </li>
