--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
         <h2> Related Publications</h2>
         <ol>
             <li>
+                Li, Shuai and Xu, Yifang and Chen, Jianli and Zhu, Siyao and Cai, Jiannan. (2025). A large language model-based platform for real-time building monitoring and occupant interaction.  Journal of building engineering.
+            </li>
+            <br>
+            <li>
                 Da Long, Zhitong Xu, Qiwei Yuan, Yin Yang, and Shandian Zhe, “ Invertible Fourier Neural Operators for Tackling Both Forward and Inverse Problems”, The 28th International Conference on Artificial Intelligence and Statistics (AISTATS), 2025
             </li>
             <br>
