--- a/index.html
+++ b/index.html
@@ -82,17 +82,18 @@
         <div class="team-section">
             <div class="team-row">
                 <div class="team-member">
-                    <img src="image/jianli-chen.jpg" alt="Jianli Chen">
-                    <div>
-                        <strong>Former Pi: Jianli Chen</strong> - <a href="https://i2be.civil.utah.edu/">Profile</a>
-                    </div>
-                </div>
-                <div class="team-member">
                     <img src="image/shandian.jpg" alt="Shandian Zhe">
                     <div>
                         <strong>PI: Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
                     </div>
                 </div>
+                <div class="team-member">
+                    <img src="image/jianli-chen.jpg" alt="Jianli Chen">
+                    <div>
+                        <strong>Former Pi: Jianli Chen</strong> - <a href="https://i2be.civil.utah.edu/">Profile</a>
+                    </div>
+                </div>
+                
             </div>
         </div>
         
@@ -126,7 +127,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="image/zhihao-ma.jpg" alt="Da Long">
+                    <img src="image/qiwei.jpg" alt="Da Long">
                     <div>
                         <strong>Qiwei Yuan</strong><br>
                         PhD student, 3rd year<br>
