--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             <h2> Community and Code Repositories</h2>
         <div class="code">
             <ul>
+                <li><a href='https://github.com/ZhihaoMa1011/NODE'>Neural ordinary differential equations-based approach for enhanced building energy modeling on small datasets</a></li>
         <li><a href="https://github.com/BayesianAIGroup/ACM-FD">Arbitrarily-Conditioned Multi-Functional Diffusion for Multi-Physics Emulation</a></li>
         <li><a href="https://github.com/XZT008/Efficient-Kernel-PDE-Solver">Efficient Kernel-Based Solvers for Nonlinear PDEs</a></li>
         <li><a href="https://github.com/BayesianAIGroup/iFNO">Invertible Fourier Neural Operators for Tackling Both Forward and Inverse Problems</a></li>
