--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                         <strong>PI: Shandian Zhe</strong> - <a href="https://users.cs.utah.edu/~zhe/">Profile</a>
                     </div>
                 </div>
+                 <div class="team-member">
+                    <img src="image/shuai.jpg" alt="Shandian Zhe">
+                    <div>
+                        <strong>CO-PI: Shuai Li</strong> - <a href="https://www.eng.ufl.edu/about/contact/college-directory/name/shuai-li/">Profile</a>
+                    </div>
+                </div>
                 <div class="team-member">
                     <img src="image/jianli-chen.jpg" alt="Jianli Chen">
                     <div>
