--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@ To enhance usability, we also developed an interactive human-AI interface, makin
         <h2> Related Publications</h2>
         <ol>
             <li>
+                Ma, Zhihao and Gang Jiang and Jianli Chen. "Neural ordinary differential equations-based approach for enhanced building energy modeling on small datasets." Building Simulation, 2025.
+            </li>
+            <br>
+             <li>
+                Zhihao Ma, Gang Jiang, Yuqing Hu, Jianli Chen. "A review of physics-informed machine learning for building energy modeling." Applied Energy, Volume 381, 2025.
+            </li>
+            <br>
+            <li>
                 Li, Shuai and Xu, Yifang and Chen, Jianli and Zhu, Siyao and Cai, Jiannan. (2025). A large language model-based platform for real-time building monitoring and occupant interaction.  Journal of building engineering.
             </li>
             <br>
@@ -208,6 +216,15 @@ To enhance usability, we also developed an interactive human-AI interface, makin
                 Da Long, Zhitong Xu, Guang Yang, Akil Narayan, and Shandian Zhe, “Arbitrarily-Conditioned Multi-Functional Diffusion for Multi-Physics Emulation”, Forty-Second International Conference on Machine Learning (ICML), 2025.
             </li>
             <br>
+            <li>
+                Jiang, G., Chen, Y., Wang, Z., Powell, K., Billings, B., & Chen, J. (2024). "A deep learning-based Bayesian framework for high-resolution calibration of building energy models". Energy and Buildings, 2024
+            </li>
+            <br>
+            <li>
+                Ma, Z., Jiang, G., & Chen, J. (2024). "Physics-informed ensemble learning with residual modeling for enhanced building energy prediction." Energy and Buildings, 2024
+            </li>
+            <br>
+
             <li> 
                 Jiang, G., Ma, Z., Zhang, L., & Chen, J. (2024). "EPlus-LLM: A large language model-based computing platform for automated building energy modeling", Applied Energy, 367, 123431.
             </li>
@@ -228,6 +245,10 @@ To enhance usability, we also developed an interactive human-AI interface, makin
                 Shikai Fang, Xin Yu, Zheng Wang, Shibo Li, Rboert M. Kirby, and Shandian Zhe, "Functional Bayesian Tucker Decomposition for Continuous-indexed Tensor", The International Conference on Learning Representations (ICLR), 2024.
             </li>
                <br>
+            <li>
+                Da Long, Nicole Mrvaljević, Shandian Zhe, Bamdad Hosseini, "A kernel framework for learning differential equations and their solution operators", Physica D: Nonlinear Phenomena, Volume 460, 2024.
+            </li>
+            <br>
             <li>
                 Xu, Y., Zhu, S., Chen, J., Cai, J., & Li, S. (2024). A GPT-Integrated Platform for Real-Time Building Monitoring and Occupant Interaction. Journal of Building Engineering, Under Review. 
             </li>
